# nb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  nb.py  pyproject.toml
tests/: test_nb.py
tests/assets/: test_with_markers.ipynb  test_without_markers.ipynb
